feat(search): add bing and google support
